--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "electron-packager": "^12.2.0"
   },
   "dependencies": {
+    "electron-store": "^2.0.0",
+    "glob": "^7.1.3",
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.35.7",
     "node-notifier": "^5.2.1",
@@ -25,6 +27,8 @@
     "npm": "^6.4.1",
     "opn": "^5.4.0",
     "ospath": "^1.2.2",
+    "path-exists": "^3.0.0",
+    "request-promise-native": "^1.0.5",
     "shelljs": "^0.8.2"
   }
 }
