--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fb-editor-electron",
+  "productName": "Form Builder",
   "version": "0.0.1",
   "description": "Form Builder electron app",
   "main": "main.js",
@@ -14,7 +15,7 @@
   "author": "GitHub",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^3.0.4",
+    "electron": "^3.0.8",
     "electron-packager": "^12.2.0"
   },
   "dependencies": {
@@ -22,13 +23,14 @@
     "glob": "^7.1.3",
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.35.7",
-    "node-notifier": "^5.2.1",
+    "node-notifier": "^5.3.0",
     "node-notifier-cli": "^1.1.2",
     "npm": "^6.4.1",
     "opn": "^5.4.0",
     "ospath": "^1.2.2",
     "path-exists": "^3.0.0",
     "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.2",
     "shelljs": "^0.8.2"
   }
 }
