--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "opn": "^5.4.0",
     "ospath": "^1.2.2",
     "path-exists": "^3.0.0",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.2"
