--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-packager": "^12.2.0"
   },
   "dependencies": {
+    "electron-better-ipc": "^0.1.1",
     "electron-store": "^2.0.0",
     "glob": "^7.1.3",
     "hostile": "^1.3.2",
