--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "electron-better-ipc": "^0.1.1",
     "electron-store": "^2.0.0",
+    "find-process": "^1.2.1",
     "glob": "^7.1.3",
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.35.7",
