--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fb-editor-console-electron",
   "productName": "Form Builder Console",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Form Builder Console",
   "main": "main.js",
   "scripts": {
@@ -15,26 +15,28 @@
   "author": "alex.robinson@digital.justice.gov.uk",
   "license": "MIT",
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.0.3",
-    "electron": "^3.0.8",
-    "electron-packager": "^12.2.0"
+    "@ministryofjustice/eslint-config-fb": "^1.0.4",
+    "electron": "^3.1.3",
+    "electron-packager": "^13.0.1"
   },
   "dependencies": {
-    "electron-better-ipc": "^0.1.1",
+    "electron-better-ipc": "^0.1.2",
     "electron-store": "^2.0.0",
+    "electron-timber": "^0.5.1",
     "find-process": "^1.2.1",
+    "github-api": "^3.0.0",
     "glob": "^7.1.3",
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.35.7",
-    "node-notifier": "^5.3.0",
+    "node-notifier": "^5.4.0",
     "node-notifier-cli": "^1.1.2",
-    "npm": "^6.4.1",
+    "npm": "^6.7.0",
     "opn": "^5.4.0",
     "ospath": "^1.2.2",
     "path-exists": "^3.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "rimraf": "^2.6.2",
-    "shelljs": "^0.8.2"
+    "rimraf": "^2.6.3",
+    "shelljs": "^0.8.3"
   }
 }
