--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "author": "alex.robinson@digital.justice.gov.uk",
   "license": "MIT",
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.0.6",
-    "electron": "^4.2.2",
+    "@ministryofjustice/eslint-config-fb": "^1.0.7",
+    "electron": "^5.0.4",
     "electron-packager": "^13.1.1"
   },
   "dependencies": {
-    "electron-better-ipc": "^0.1.2",
-    "electron-store": "^3.2.0",
+    "electron-better-ipc": "^0.3.0",
+    "electron-debug": "^3.0.0",
+    "electron-store": "^3.3.0",
     "electron-timber": "^0.5.1",
-    "find-process": "^1.4.1",
+    "find-process": "^1.4.2",
     "github-api": "^3.2.0",
     "glob": "^7.1.4",
     "hostile": "^1.3.2",
