--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.1.4",
     "electron": "^7.0.0",
-    "electron-packager": "^14.1.0"
+    "electron-packager": "^14.1.0",
+    "eslint-plugin-html": "^6.0.0"
   },
   "productName": "Form Builder Console"
 }
