--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./main.js",
   "scripts": {
     "start": "electron .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint . --ext .js,.html",
+    "lint:fix": "npm run lint -- --fix"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": "https://github.com/ministryofjustice/fb-editor-console-electron",
