--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "fb-editor-console-electron",
+  "name": "@ministryofjustice/fb-editor-console-electron",
   "version": "0.5.5",
   "description": "Form Builder Console",
   "main": "./main.js",
   "scripts": {
     "start": "electron .",
-    "lint": "eslint . --ext .js,.html",
-    "lint:fix": "npm run lint -- --fix"
+    "build": "cross-env NODE_ENV=production concurrently -r \"npm run gulp -- build\" \"webpack\"",
+    "build:watch": "npm run gulp -- build:watch",
+    "build:fonts": "npm run gulp -- build:fonts",
+    "build:fonts:watch": "npm run gulp -- build:fonts:watch",
+    "build:images": "npm run gulp -- build:images",
+    "build:images:watch": "npm run gulp -- build:images:watch",
+    "build:js": "cross-env NODE_ENV=production webpack",
+    "build:js:watch": "npm run build:js -- --watch",
+    "build:css": "npm run gulp -- build:css",
+    "build:css:watch": "npm run gulp -- build:css:watch",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
+    "lint:js": "eslint .",
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:css": "stylelint src/sass",
+    "lint:css:fix": "npm run lint:css -- --fix",
+    "gulp": "gulp --color",
+    "pre-commit": "npm run build && git add assets"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": "https://github.com/ministryofjustice/fb-editor-console-electron",
@@ -23,6 +39,7 @@
     "find-process": "^1.4.3",
     "github-api": "^3.3.0",
     "glob": "^7.1.6",
+    "govuk-frontend": "^3.4.0",
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.72.0",
     "node-notifier": "^6.0.0",
@@ -36,9 +53,46 @@
   },
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.1.6",
+    "@ministryofjustice/module-alias": "^1.0.8",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.0.1",
+    "cross-env": "^6.0.3",
+    "cssnano": "^4.1.10",
+    "del": "^5.1.0",
     "electron": "^7.1.4",
     "electron-packager": "^14.1.1",
-    "eslint-plugin-html": "^6.0.0"
+    "eslint-plugin-html": "^6.0.0",
+    "glob-all": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-css-purge": "^3.0.9",
+    "gulp-debug": "^4.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "husky": "^3.1.0",
+    "postcss-normalize": "^8.0.1",
+    "postcss-scss": "^2.0.0",
+    "sacred-fs": "^1.0.13",
+    "stylelint": "^10.0.1",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-scss": "^3.6.1",
+    "terser-webpack-plugin": "^2.3.0",
+    "vinyl-paths": "^3.0.1",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-merge": "^4.2.1"
   },
-  "productName": "Form Builder Console"
+  "productName": "Form Builder Console",
+  "_moduleAliases": {
+    "~": "."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
+  }
 }
