--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:css": "stylelint src/sass",
     "lint:css:fix": "npm run lint:css -- --fix",
+    "transform": "npm run gulp -- transform",
     "gulp": "gulp --color",
-    "pre-commit": "npm run build && git add assets"
+    "pre-commit": "npm run build && npm run transform && git add assets *.html"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": "https://github.com/ministryofjustice/fb-editor-console-electron",
