--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:css:fix": "npm run lint:css -- --fix",
     "transform": "npm run gulp -- transform",
     "gulp": "gulp --color",
-    "pre-push": "npm run build && npm run transform && git add assets *.html"
+    "pre-commit": "npm run build && npm run transform && git add assets *.html"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": "https://github.com/ministryofjustice/fb-editor-console-electron",
@@ -93,7 +93,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run pre-push"
+      "pre-commit": "npm run pre-commit"
     }
   }
 }
