--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "hostile": "^1.3.2",
     "isomorphic-git": "^0.72.0",
     "node-notifier": "^6.0.0",
-    "opn": "^6.0.0",
+    "open": "^7.0.0",
     "ospath": "^1.2.2",
     "path-exists": "^4.0.0",
     "request": "^2.88.0",
