--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:css": "stylelint src/sass",
     "lint:css:fix": "npm run lint:css -- --fix",
+    "test": "mocha test --recursive --require @ministryofjustice/module-alias/register",
     "transform": "npm run gulp -- transform",
     "gulp": "gulp --color",
     "pre-commit": "npm run build && npm run transform && git add assets *.html"
@@ -57,6 +58,7 @@
     "@ministryofjustice/module-alias": "^1.0.8",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.1",
     "cross-env": "^6.0.3",
@@ -75,8 +77,10 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "husky": "^3.1.0",
+    "mocha": "^6.2.2",
     "postcss-normalize": "^8.0.1",
     "postcss-scss": "^2.0.0",
+    "proxyquire": "^2.1.3",
     "sacred-fs": "^1.0.13",
     "stylelint": "^10.0.1",
     "stylelint-config-recommended-scss": "^3.3.0",
