--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "rimraf": "^3.0.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "strip-ansi": "^6.0.0",
+    "yargs-parser": "^16.1.0"
   },
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.1.6",
