--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
   "env": {
-  	"browser": true
+    "node": true
   },
   "extends": "@ministryofjustice/eslint-config-fb",
   "plugins": [
-  	"html"
+    "html"
   ]
 }
