--- a/package.json
+++ b/package.json
@@ -37,20 +37,16 @@
     "cross-env": "^6.0.3",
     "electron": "^7.1.6",
     "electron-better-ipc": "^0.7.0",
-    "electron-debug": "^3.0.1",
     "electron-store": "^5.1.0",
     "electron-timber": "^0.5.1",
     "find-process": "^1.4.3",
     "github-api": "^3.3.0",
     "glob": "^7.1.6",
     "govuk-frontend": "^3.4.0",
-    "hostile": "^1.3.2",
     "isomorphic-git": "^0.72.0",
-    "node-notifier": "^6.0.0",
     "open": "^7.0.0",
     "ospath": "^1.2.2",
     "path-exists": "^4.0.0",
-    "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.3",
@@ -96,7 +92,9 @@
   },
   "productName": "Form Builder Console",
   "_moduleAliases": {
-    "~": "."
+    "~": ".",
+    "~/test": "./test",
+    "~/mock": "./test/.mock"
   },
   "husky": {
     "hooks": {
