--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   ],
   "dependencies": {
     "cross-env": "^6.0.3",
-    "electron": "^7.1.7",
     "electron-better-ipc": "^0.7.0",
     "electron-store": "^5.1.0",
     "electron-timber": "^0.5.1",
@@ -47,6 +46,7 @@
     "open": "^7.0.0",
     "ospath": "^1.2.2",
     "path-exists": "^4.0.0",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.3",
@@ -63,6 +63,7 @@
     "concurrently": "^5.0.2",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "electron": "^7.1.7",
     "electron-packager": "^14.1.1",
     "eslint-plugin-html": "^6.0.0",
     "glob-all": "^3.1.0",
@@ -74,13 +75,13 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "husky": "^4.0.0",
+    "husky": "^4.0.1",
     "mocha": "^7.0.0",
     "postcss-normalize": "^8.0.1",
     "postcss-scss": "^2.0.0",
     "proxyquire": "^2.1.3",
     "sacred-fs": "^1.0.14",
-    "sinon": "^8.0.2",
+    "sinon": "^8.0.4",
     "stylelint": "^12.0.1",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-scss": "^3.13.0",
