--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ jspm_packages
 # Release
 Form.Builder.Console
 Form.Builder.Console.*
+Form Builder Console
+Form Builder Console.*
+
+# Distribution
+*.provisionprofile
+*.plist
