--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,11 @@
 root = true
 
 [*]
-end_of_line = lf
+end_of_line = crlf
 insert_final_newline = true
 charset = utf-8
 indent_style = space
-
-[*.scss,*.js,*.html]
 indent_size = 2
+
+[*.sh]
+end_of_line = lf
