--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,14 @@
 {
+  "extends": "standard",
   "env": {
-    "node": true
+    "node": true,
+    "es2020": true
   },
-  "extends": "@ministryofjustice/eslint-config-fb",
   "plugins": [
     "html"
-  ]
+  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module"
+  }
 }
