--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "yargs-parser": "^16.1.0"
   },
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.1.8",
     "@ministryofjustice/module-alias": "^1.0.9",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -65,7 +65,13 @@
     "del": "^5.1.0",
     "electron": "^7.1.10",
     "electron-packager": "^14.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "glob-all": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
