--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:css:watch": "npm run gulp -- build:css:watch",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
-    "lint:js": "eslint . --ext .js,.html",
+    "lint:js": "eslint *.js *.html build src lib test --ext .js,.html",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:css": "stylelint src/sass",
     "lint:css:fix": "npm run lint:css -- --fix",
