--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "proxyquire": "^2.1.3",
     "sacred-fs": "^1.0.14",
     "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0",
     "stylelint": "^13.1.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.14.2",
