--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "mocha test --recursive --require @ministryofjustice/module-alias/register",
     "transform": "npm run gulp -- transform",
     "gulp": "gulp --color",
-    "pre-commit": "npm run build && npm run transform && git add assets *.html"
+    "pre-commit": "npm run build && npm run transform && git add assets *.html",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": "https://github.com/ministryofjustice/fb-editor-console-electron",
@@ -65,7 +67,8 @@
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "electron": "^8.0.1",
-    "electron-packager": "^14.2.1",
+    "electron-builder": "^22.3.2",
+    "electron-notarize": "^0.2.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-html": "^6.0.0",
@@ -86,7 +89,6 @@
     "postcss-normalize": "^8.0.1",
     "postcss-scss": "^2.0.0",
     "proxyquire": "^2.1.3",
-    "sacred-fs": "^1.0.14",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "stylelint": "^13.1.0",
